syntax = "proto3";

package pb;
option go_package = "/pb";


message RegistNodeReq {
    bytes NodeUID = 1;
}

message RegistNodeRsp {
    int32  Code = 1;
    string Error = 2;
}