syntax = "proto3";

package pb;
option go_package = "/pb";


message Package {
    int32 NodeID     = 1;
    int32 MessageID  = 2;
    int32 UserID     = 3;
    int64 Idempotent = 4;
    string RealAddr  = 5;
    bytes Token      = 6;
    bytes Data       = 7;
}